Исправллен косяк с изменением старого файла добавлены новые тесты